--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <nav>
     <img src="download (4).png" alt="logo">
     <a href="#header"><span style="color:re.." >الرئيسية</span></a>
-    <a href="#advantages" >المميزات </a>
+    <a href="#mus" >الشيلة </a>
     <a href="#display" >المهنئون</a>
     <a href="#advantages" >الصور</a>
     </nav>
@@ -228,7 +228,10 @@
 <span> المهنئون: { الأخ 《 أسامة عبده محمد الحالمي 》 《محمد عبده محمد الحالمي 》 《 سليمان عبده محمد الحالمي 》}</span><br> 
 <hr>
 <br>
-<br><div style="color:black; font-weight:bolder;font-size:20px;"  >✨❤️ يا جبران فرحتَ و تهنا ❤️✨
+<br>
+
+
+<div style="color:black; font-weight:bolder;font-size:20px;"  >✨❤️ يا جبران فرحتَ و تهنا ❤️✨
 <br>.
 ✨❤️ و القلب يشدوا والأناشيد تغنا ❤️✨
  ✨❤️يومٌ بهيجٌ جمعَ الأحبابَ حولَكَ ✨❤️<br>❤️✨ فاز الهناء وكم أُسعدَ المُهنّا ❤️✨
@@ -251,6 +254,7 @@
  </div>
  </p>	
     </div>
+    
   <div class="main"> 
   <div>
   <img src="images (56).jpeg">
@@ -258,7 +262,18 @@
   <h2>إهداء الأخ الغالي جبران لطف المخلافي . </h2>
   <h3 >الف الف الف مبرووووك ✨🌟💐💫🌹❤️</h3>
   </div>
+  
+  <div class="child1" id="mus" >
+  
+  
+  
+  <audio src="2.m4a" controls loop    >
+  <hr>
+  <p>شيلة آل المخلافي  </p>
+  <h2><hr></h2>
+  </div>
   <div class="child1">
+  
   
  <img src="46.jpg">
   <h2><span style="color:rgb(255 25 66)" >محبكم</span> اسامة عبده الحالمي ✨❤️💐💫</h2>
@@ -488,6 +503,7 @@
     <img src="44.jpg">
     <h2><hr></h2>
     </div>
+ 
     <br>
     <br>
     <br>
